# brave-core

./: package-lock.json  package.json
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc
browser/: BUILD.gn  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc
browser/android/: BUILD.gn  brave_cosmetic_resources_tab_helper.cc  brave_cosmetic_resources_tab_helper.h  cosmetic_filters_communication_impl.cc  cosmetic_filters_communication_impl.h
browser/brave_wallet/: sources.gni
browser/farbling/: BUILD.gn
browser/profiles/: brave_profile_manager.cc
browser/ui/: BUILD.gn
common/: webui_url_constants.cc  webui_url_constants.h
components/brave_ads/resources/: BUILD.gn  brave_ads_static_resources.grd
components/brave_ads/resources/internals/: BUILD.gn  brave_ads_internals.html
components/brave_new_tab_ui/: apiEventsToStore.ts
components/definitions/: chromel.d.ts  newTab.d.ts  react-virtualized-auto-sizer.d.ts  rewardsInternals.d.ts  today.d.ts
components/ipfs/: ipfs_cookie_store_unittest.cc
components/webpack/: webpack.config.js
content/browser/: cosmetic_filters_communication_impl.cc  cosmetic_filters_communication_impl.h  (+1 more)
patches/: chrome-browser-about_flags.cc.patch  components-variations-variations_seed_store.cc.patch  content-browser-BUILD.gn.patch  content-browser-browser_interface_binders.cc.patch  content-browser-frame_host-render_frame_host_impl.cc.patch  content-browser-frame_host-render_frame_host_impl.h.patch
renderer/: BUILD.gn
test/: BUILD.gn
(+65 files in other folders)
